# LaserHockeyProject

./: .gitignore  .gitmodules  Dyna_Hockey.sbatch  Dyna_LunarLander.sbatch  Dyna_Pendulum.sbatch  ER_Dyna_Hockey.sbatch  ER_Dyna_LunarLander.sbatch  MD_Dyna_LunarLander.sbatch  README.md  SAC_Hockey.sbatch  SAC_Pendulum.sbatch  SB_ER_SAC_Hockey.sbatch  SB_SAC_Hockey.sbatch  SB_SAC_Hockey_SP.sbatch  Untitled-1.ipynb  autorun.sh  c2c.sh  container.def  dev.ipynb  environment.yaml  job_submission.sbatch  pyproject.toml  requirements.txt
config/: sac_config.yaml  train_dyna.yaml  train_er_dyna.yaml  train_md_dyna.yaml  train_sac.yaml  train_sb_sac.yaml
config/hydra/: hydra.yaml
config/training/: train_dyna.yaml  train_er_dyna.yaml  train_md_dyna.yaml  train_sac.yaml  train_sb_sac.yaml
project/: __main__.py  entrypoint.py
project/algorithms/: agent.py  algorithm.py  env_wrapper.py  logger.py  network.py  sac.py  trainer.py  utils.py
project/algorithms/common/: algorithm.py  buffer.py  logger.py  network.py  q_net.py
project/algorithms/dreamer/: rssm.py
project/algorithms/dyna/: dyna.py  env_model.py  experimental.py  q_net.py  world_model.py
project/algorithms/sac/: actor.py  buffer.py  policy_net.py  q_net.py  sac.py  utils.py
project/algorithms/sb3_extensions/: sac.py
project/environment/: env_wrapper.py  evaluate_env.py  hdf5_replay_buffer.py  opponent.py  single_player_env.py  test_hdf5_replay_buffer.py
project/scripts/: evaluate.py  render.py  run_render.py  train.py  upload.py
project/utils/: env_wrapper.py  parser.py
(+10 files in other folders)
