[tool.poetry]
name = "laserhockeyproject"
version = "0.1.0"
description = ""
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^1.0.0"
numpy = "^2.2.0"
box2d-py = "^2.3.8"
pygame = "^2.6.1"
torch = "^2.5.1"
pyargwriter = "^1.0.0"
stable-baselines3 = "^2.4.0"
tensorboard = "^2.18.0"
scipy = "^1.15.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
